base/monitoring/prometheus-pushgateway/networkpolicies/prometheus-pushgateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-pushgateway
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-pushgateway
      app.kubernetes.io/instance: prometheus-pushgateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
        - matchLabels:
            app: gitlab-backup-mirror
            component: job
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            io.kubernetes.pod.namespace: healthchecks
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: filebrowser
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: k8up
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: media
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: nextcloud
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: wallabag
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: wiki
            k8upjob: "true"
        - matchLabels:
            io.kubernetes.pod.namespace: keycloak
            k8upjob: "true"
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
